@@ -35,8 +35,6 @@ Release 1.0:
 * Log failures in the wallet-backend properly, which also requires
   catching all exceptions.
 
-* Implement special handling for keytabs in the wallet client.
-
 * Add support to the wallet client for getting Kerberos tickets, using the
   -u option similar to leland_srvtab.  Needs good error messages on
   Kerberos failures.
