@@ -12,7 +12,7 @@
 . "@abs_top_srcdir@/tests/libtest.sh"
 
 # Print the number of tests.
-total=23
+total=27
 count=1
 echo "$total"
 
@@ -78,29 +78,29 @@ if [ -z "$krb5conf" ] ; then
 fi
 
 # Make sure everything's clean.
-rm -f keytab keytab.bak srvtab srvtab.bak sync-kaserver
+rm -f output output.bak keytab keytab.bak srvtab srvtab.bak sync-kaserver
 
 # Now, we can finally run our tests.  First, basic operations.
 runsuccess "" "$wallet" -k "$principal" -p 14373 -s localhost -c fake-wallet \
-    get keytab -f keytab service/fake-test
-if cmp keytab data/fake-data >/dev/null 2>&1 ; then
+    get file -f output fake-test
+if cmp output data/fake-data >/dev/null 2>&1 ; then
     printcount "ok"
 else
     printcount "not ok"
 fi
-if [ -f keytab.bak ] || [ -f keytab.new ] ; then
+if [ -f output.bak ] || [ -f output.new ] ; then
     printcount "not ok"
 else
     printcount "ok"
 fi
 runsuccess "" "$wallet" -k "$principal" -p 14373 -s localhost -c fake-wallet \
-    get keytab -f keytab service/fake-test
-if cmp keytab data/fake-data >/dev/null 2>&1 ; then
+    get file -f output fake-test
+if cmp output data/fake-data >/dev/null 2>&1 ; then
     printcount "ok"
 else
     printcount "not ok"
 fi
-if [ -f keytab.new ] || [ ! -f keytab.bak ] ; then
+if [ -f output.new ] || [ ! -f output.bak ] ; then
     printcount "not ok"
 else
     printcount "ok"
@@ -118,8 +118,23 @@ cat >> krb5.conf <<EOF
         wallet_principal = $principal
     }
 EOF
-runsuccess "" "$wallet" get keytab -f keytab service/fake-test
-if cmp keytab data/fake-data >/dev/null 2>&1 ; then
+runsuccess "" "$wallet" -f output get file fake-test
+if cmp output data/fake-data >/dev/null 2>&1 ; then
+    printcount "ok"
+else
+    printcount "not ok"
+fi
+rm -f output output.bak
+
+# Test keytab support.
+runsuccess "" "$wallet" get -f keytab keytab service/fake-srvtab
+if cmp keytab data/fake-keytab >/dev/null 2>&1 ; then
+    printcount "ok"
+    rm keytab
+else
+    printcount "not ok"
+fi
+if [ ! -f sync-kaserver ] ; then
     printcount "ok"
 else
     printcount "not ok"
@@ -129,16 +144,10 @@ fi
 runsuccess "" "$wallet" get keytab -f keytab -S srvtab service/fake-srvtab
 if cmp keytab data/fake-keytab >/dev/null 2>&1 ; then
     printcount "ok"
-    rm keytab
 else
     printcount "not ok"
 fi
-if cmp keytab.bak data/fake-data >/dev/null 2>&1 ; then
-    printcount "ok"
-    rm keytab.bak
-else
-    printcount "not ok"
-fi
+rm keytab
 if [ -f sync-kaserver ] ; then
     printcount "ok"
 else
@@ -147,7 +156,6 @@ fi
 runsuccess "" "$wallet" get keytab -f keytab -S srvtab service/fake-srvtab
 if cmp keytab data/fake-keytab >/dev/null 2>&1 ; then
     printcount "ok"
-    rm keytab
 else
     printcount "not ok"
 fi
@@ -159,26 +167,38 @@ else
 fi
 if cmp srvtab data/fake-srvtab >/dev/null 2>&1 ; then
     printcount "ok"
-    rm srvtab
 else
     printcount "not ok"
 fi
 if cmp srvtab.bak data/fake-srvtab >/dev/null 2>&1 ; then
     printcount "ok"
-    rm srvtab.bak
 else
     printcount "not ok"
 fi
+rm -f srvtab srvtab.bak
+
+# Test keytab merging.
+runsuccess "" "$wallet" -f keytab get keytab service/fake-keytab
+(klist -keK keytab 2>&1) | sed '/Keytab name:/d' > klist-seen
+(klist -keK data/fake-keytab-merge 2>&1) | sed '/Keytab name:/d' > klist-good
+if cmp klist-seen klist-good >/dev/null 2>&1 ; then
+    printcount "ok"
+    rm -f keytab klist-seen klist-good
+else
+    printcount "not ok"
+fi
+
+# Test various other client functions and errors.
 runsuccess "This is a fake keytab." "$wallet" get keytab service/fake-output
-runsuccess "Some stuff about service/fake-test" \
-    "$wallet" show keytab service/fake-test
+runsuccess "Some stuff about file fake-test" \
+    "$wallet" show file fake-test
 runfailure 1 "wallet: Unknown object type srvtab" \
     "$wallet" get srvtab service/fake-test
 runfailure 1 "wallet: Unknown keytab service/unknown" \
     "$wallet" show keytab service/unknown
 runfailure 1 "wallet: Unknown keytab service/unknown" \
     "$wallet" get keytab service/unknown
-runsuccess "Expiration date of service/fake-test" \
+runsuccess "Expiration date of keytab service/fake-test" \
     "$wallet" expires keytab service/fake-test
 
 # Clean up.
